# note-taking-app

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/api/: notes.py
app/templates/: base.html  index.html
static/css/: styles.css
static/js/: scripts.js
tests/: test_notes.py  tests_notes.py
