[tool.poetry]
name = "note-taking-app"
version = "0.1.0"
description = "A FastAPI-based note-taking application."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.6"
jinja2 = "^3.1.2"
jinja2-time = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
httpx = "^0.24.0"
ruff = "^0.0.277"
pre-commit = "^3.3.3"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
